App 4 Backup Updated

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".doAddColor"></activity>
+        <activity android:name=".ViewInventory"></activity>
+        <activity android:name=".doAddArea" />
+        <activity android:name=".doAddPart" />
+        <activity android:name=".doAddColor" />
         <activity android:name=".AddPart" />
         <activity android:name=".MainActivity">
             <intent-filter>
