Currently finished product

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".displaySearchResults"></activity>
+        <activity android:name=".UpdateDeletePart"></activity>
+        <activity android:name=".displaySearchResults" />
         <activity android:name=".ViewInventory" />
         <activity android:name=".doAddArea" />
         <activity android:name=".doAddPart" />
